data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3320.wast
;; 9. **Test Description**:    - **Scenario**: Introduce a function that modifies the stack height incorrectly and include an `unreachable` after calling it.    - **Constraint Checked**: Proper stack height adjustments during function calls.    - **Unreachable Code Execution**: Incorrect stack height might cause control to reach `unreachable`.    - **Expected Differential Behaviour**: wizard_engine will trap on stack height issues, whereas WebAssembly might mishandle stack and execute `unreachable`.

(assert_invalid
  (module
    (type (func (result i32)))
    (func $test
      (local i32)
      (i32.const 1)
      (call $mod_stack_height)
      (unreachable)
    )
    (func $mod_stack_height (result i32)
      (i32.const 10) 
      (i32.add) 
    )
  )
  "stack height adjustment error"
)